--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,11 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="libs/publicSecurityIDCardLib.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/sdtapi.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/httpclient-4.5.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/fastjson-1.2.31.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/HDLibs.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/sdtapi.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
