--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/iconlogo"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
@@ -81,8 +81,14 @@
             android:enabled="true"
             android:exported="true" >
         </service>
-
+		<service
+            android:name="com.example.service.GetLatestEscapedDataService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
         <receiver android:name="com.example.broadcastreceiver.AlarmReceiver" >
+        </receiver>
+        <receiver android:name="com.example.broadcastreceiver.GetLatestEscapedReceiver">
         </receiver>
     </application>
 
