--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,17 +26,19 @@
         android:allowBackup="true"
         android:icon="@drawable/iconlogo"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+        >
         <activity
             android:name=".PersonInfoActivity"
             android:label="@string/app_name"
             android:parentActivityName="com.example.mobilepolicedevice.MainActivity"
             android:screenOrientation="portrait" >
+           
         </activity>
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" >
-            <intent-filter>
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
